# jsc-standalone

./: CMakeLists.txt  README.md
win/lib32/: JavaScriptCore.exp  JavaScriptCore.lib
